[metadata]
name = python-dali
version = 0.11
description = Interface to DALI lighting systems
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Stephen Early
author_email = steve@assorted.org.uk
url = https://github.com/sde1000/python-dali
license = LGPL3+
license_files =
    COPYING
    COPYING.LESSER
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages =
    dali
    dali.device
    dali.driver
    dali.gear
    dali.memory
    dali.tests

[options.extras_require]
driver-unipi =
    pyusb
    pymodbus
driver-serial = pyserial-asyncio
test =
    pytest
    pytest-asyncio
    pyserial-asyncio

[flake8]
exclude = */driver/
ignore = E741, F403, F405, W503
# Please write with max-line-length = 80 where possible
max-line-length = 103
